k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-platform
  labels:
    app: nexus-platform
