k8s/app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-platform
  namespace: nexus-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-platform
  template:
    metadata:
      labels:
        app: nexus-platform
    spec:
      containers:
        - name: nexus-platform
          image: ghcr.io/vikash1703/nexus-platform:latest
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-platform
  namespace: nexus-platform
spec:
  selector:
    app: nexus-platform
  ports:
    - port: 9090
      targetPort: 9090
  type: ClusterIP
